Renamed test_clustering to test_multistep

--- a/nbs/test/test_multistep_no_params.ipynb
+++ b/nbs/test/test_multistep_no_params.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "# hide\n",
-    "# default_exp test.test_clustering"
+    "# default_exp test.test_multistep_no_params"
    ]
   },
   {
@@ -59,7 +59,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "# TODO bring back in library calls"
+    "from sciflow.utils import lib_path"
    ]
   },
   {
@@ -74,11 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "tags": [
-     "parameters"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
@@ -156,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,11 +411,7 @@
     "    )\n",
     "    # You can add artifacts in a step that will be saved to block storage. Add the paths to the file on the local filesystem\n",
     "    # and the artifact will be uploaded to remote storage.\n",
-    "    sample_df = pd.DataFrame(\n",
-    "        {\"a\": model.get_topic_sizes()[0], \"b\": model.get_topic_sizes()[1]}\n",
-    "    )\n",
-    "    sample_df.to_csv(\"/tmp/dataframe_artifact.csv\", index=False)\n",
-    "    artifacts = [\"/tmp/dataframe_artifact.csv\"]\n",
+    "    artifacts = [lib_path(\"nbs\", \"test\", \"dataframe_artifact.csv\")]\n",
     "    # You can add step metrics too this time just add a list of 3-tuples where tuple order = (name, value, step)\n",
     "    metrics = [(\"mae\", 100, 0), (\"mae\", 67, 1), (\"mae\", 32, 2)]\n",
     "    results = {\n",
@@ -432,14 +424,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "results = evaluate(model)\n",
     "assert results[\"word_summaries\"]\n",
     "assert results[\"metrics\"] == [(\"mae\", 100, 0), (\"mae\", 67, 1), (\"mae\", 32, 2)]\n",
-    "assert results[\"artifacts\"] == [\"/tmp/dataframe_artifact.csv\"]"
+    "assert results[\"artifacts\"] == [lib_path(\"nbs\", \"test\", \"dataframe_artifact.csv\")]"
    ]
   },
   {
@@ -451,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
