--- a/nbs/to_metaflow.ipynb
+++ b/nbs/to_metaflow.ipynb
@@ -739,7 +739,7 @@
     "\n",
     "\n",
     "@call_parse\n",
-    "def sciflow_generate(track: Param(\"Track flows as sacred experiments\", bool) = True):\n",
+    "def sciflow_metaflow(track: Param(\"Track flows as sacred experiments\", bool) = True):\n",
     "    generate_flows(get_config(), track)"
    ]
   },
