Changed from sciflow_generate to sciflow_metaflow; tested more sagemaker pipeline conversions - not ready yet

--- a/nbs/data_handler.ipynb
+++ b/nbs/data_handler.ipynb
@@ -195,8 +195,8 @@
    "source": [
     "assert load_module(\"sciflow.test.test_data_handling\").int_param == 3\n",
     "assert load_module(\"sciflow.test.test_data_handling\").float_param == 1.1\n",
-    "assert load_module(\"sciflow.test.test_clustering\").traffic_percent == 1\n",
-    "assert load_module(\"sciflow.test.test_clustering_no_params\").traffic_percent == 1\n",
+    "assert load_module(\"sciflow.test.test_multistep\").traffic_percent == 1\n",
+    "assert load_module(\"sciflow.test.test_multistep_no_params\").traffic_percent == 1\n",
     "assert load_module(\"sciflow.test.test_export\").some_param == \"test\"\n",
     "assert load_module(\"sciflow.test.test_module\").some_param == 2\n",
     "assert type(load_module(\"sciflow.test.test_data_handling\").series_param) == pd.Series\n",
@@ -361,9 +361,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nb_path = os.path.join(Path(\".\").resolve(), \"test\", \"test_clustering.ipynb\")\n",
+    "nb_path = os.path.join(Path(\".\").resolve(), \"test\", \"test_multistep.ipynb\")\n",
     "params = params_as_dict(nb_path)\n",
-    "param_meta = extract_param_meta(\"sciflow.test.test_clustering\", params)"
+    "param_meta = extract_param_meta(\"sciflow.test.test_multistep\", params)"
    ]
   },
   {
