--- a/nbs/parse_module.ipynb
+++ b/nbs/parse_module.ipynb
@@ -69,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_module = os.path.join(get_config().path(\"lib_path\"), \"test\", \"test_clustering.py\")\n",
+    "test_module = os.path.join(get_config().path(\"lib_path\"), \"test\", \"test_multistep.py\")\n",
     "step_code = extract_step_code(test_module)\n",
     "step_names = step_code.keys()\n",
     "assert [\"first\", \"preprocess\", \"fit\", \"evaluate\"] == list(step_names)\n",
