--- a/nbs/scilint.ipynb
+++ b/nbs/scilint.ipynb
@@ -462,7 +462,7 @@
     }
    ],
    "source": [
-    "ifp(\"test/test_clustering.ipynb\")"
+    "ifp(\"test/test_multistep.ipynb\")"
    ]
   },
   {
@@ -608,7 +608,7 @@
     }
    ],
    "source": [
-    "tcl(\"test/test_clustering.ipynb\")"
+    "tcl(\"test/test_multistep.ipynb\")"
    ]
   },
   {
