--- a/nbs/to_metaflow.ipynb
+++ b/nbs/to_metaflow.ipynb
@@ -186,7 +186,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nb_path = Path(os.path.join(\"test\", \"test_clustering.ipynb\"))\n",
+    "nb_path = Path(os.path.join(\"test\", \"test_multistep.ipynb\"))\n",
     "nb = read_nb(nb_path)\n",
     "module_name = find_default_export(nb[\"cells\"]).replace(\".\", \"/\")\n",
     "test_module = os.path.join(get_config().path(\"lib_path\"), f\"{module_name}.py\")\n",
@@ -641,9 +641,9 @@
     "    Path(\n",
     "        Path(\".\").resolve(),\n",
     "        \"test\",\n",
-    "        \"test_clustering.ipynb\",\n",
+    "        \"test_multistep.ipynb\",\n",
     "    ),\n",
-    "    get_flow_path(Path(Path(\".\").resolve(), \"test\", \"test_clustering.ipynb\")),\n",
+    "    get_flow_path(Path(Path(\".\").resolve(), \"test\", \"test_multistep.ipynb\")),\n",
     "    silent=False,\n",
     "    track_experiment=True,\n",
     ")"
@@ -916,7 +916,7 @@
    "source": [
     "# slow\n",
     "\n",
-    "nb_path = os.path.join(Path(\".\").resolve(), \"test\", \"test_clustering.ipynb\")\n",
+    "nb_path = os.path.join(Path(\".\").resolve(), \"test\", \"test_multistep.ipynb\")\n",
     "ret_code, output = run_flow(\n",
     "    nb_path,\n",
     "    params=[(\"traffic_percent\", 1), (\"model_level\", \"dispatcher\")],\n",
@@ -994,7 +994,7 @@
     "# slow\n",
     "\n",
     "task = run_flow_async(\n",
-    "    os.path.join(\"test\", \"test_clustering.ipynb\"),\n",
+    "    os.path.join(\"test\", \"test_multistep.ipynb\"),\n",
     "    params={\"traffic_percent\": 10, \"workers\": 12},\n",
     ")\n",
     "task"
@@ -1118,7 +1118,7 @@
     "    os.path.join(\n",
     "        Path(\".\").resolve(),\n",
     "        \"test\",\n",
-    "        \"test_clustering.ipynb\",\n",
+    "        \"test_multistep.ipynb\",\n",
     "    )\n",
     ")\n",
     "tasks = search_flow_grid(\n",
