--- a/nbs/utils.ipynb
+++ b/nbs/utils.ipynb
@@ -75,8 +75,8 @@
    "outputs": [],
    "source": [
     "assert str(lib_path(\"nbs\")).endswith(\"sciflow/nbs\")\n",
-    "assert Path(\"test/test_clustering.ipynb\").resolve() == lib_path(\n",
-    "    \"nbs\", \"test\", \"test_clustering.ipynb\"\n",
+    "assert Path(\"test/test_multistep.ipynb\").resolve() == lib_path(\n",
+    "    \"nbs\", \"test\", \"test_multistep.ipynb\"\n",
     ")"
    ]
   },
@@ -109,7 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nb, module_path = load_nb(\"test/test_clustering.ipynb\")"
+    "nb, module_path = load_nb(\"test/test_multistep.ipynb\")"
    ]
   },
   {
@@ -145,7 +145,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nb, module_code = load_nb_module(\"test/test_clustering.ipynb\")"
+    "nb, module_code = load_nb_module(\"test/test_multistep.ipynb\")"
    ]
   },
   {
