--- a/nbs/test/test_multistep.ipynb
+++ b/nbs/test/test_multistep.ipynb
@@ -40,7 +40,7 @@
     }
    ],
    "source": [
-    "message = something()['message']"
+    "message = something()[\"message\"]"
    ]
   },
   {
@@ -77,9 +77,7 @@
     "\n",
     "\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "\n",
-    "from sciflow.utils import lib_path"
+    "import pandas as pd"
    ]
   },
   {
