Consolidated flow verfication and execution into run_flow.ipynb

--- a/nbs/to_sagemaker.ipynb
+++ b/nbs/to_sagemaker.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
     "from sciflow.packaging import determine_dependencies\n",
     "from sciflow.params import params_as_dict\n",
     "from sciflow.parse_module import FuncDetails, extract_steps\n",
-    "from sciflow.utils import lib_path"
+    "from sciflow.utils import get_flow_path, lib_path"
    ]
   },
   {
@@ -49,12 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sciflow.to_metaflow import (\n",
-    "    extract_module_only,\n",
-    "    get_flow_path,\n",
-    "    indent_multiline,\n",
-    "    titleize,\n",
-    ")"
+    "from sciflow.to_metaflow import extract_module_only, indent_multiline, titleize"
    ]
   },
   {
@@ -133,7 +128,6 @@
     "def nb_to_sagemaker_pipeline(\n",
     "    nb_path: Path,\n",
     "    flow_path: Path,\n",
-    "    config,\n",
     "    silent: bool = True,\n",
     "    track_experiment: bool = True,\n",
     "):\n",
@@ -146,25 +140,28 @@
     "    path_sep_module_name = module_name.replace(\".\", \"/\")\n",
     "    nb_name = os.path.basename(nb_path)\n",
     "    exported_module = os.path.join(\n",
-    "        config.path(\"lib_path\"), f\"{path_sep_module_name}.py\"\n",
+    "        get_config().path(\"lib_path\"), f\"{path_sep_module_name}.py\"\n",
     "    )\n",
     "    steps = extract_steps(exported_module)\n",
     "    if len(steps) == 0:\n",
-    "        print(\"Skipping sagemaker conversion - no steps found\")\n",
     "        return\n",
     "    params = params_as_dict(nb_path)\n",
     "    if len(params) == 0:\n",
     "        print(f\"No params cell found for: {os.path.basename(nb_path)}\")\n",
     "    pipeline_class_name = f\"{titleize(extract_module_only(module_name))}Pipeline\"\n",
-    "    steps_param_meta, steps_vars = write_pipeline_to_files(\n",
-    "        flow_path,\n",
-    "        pipeline_class_name,\n",
-    "        lib_name,\n",
-    "        module_name,\n",
-    "        steps,\n",
-    "        params,\n",
-    "        track_experiment,\n",
-    "    )\n",
+    "    try:\n",
+    "        steps_param_meta, steps_vars = write_pipeline_to_files(\n",
+    "            flow_path,\n",
+    "            pipeline_class_name,\n",
+    "            lib_name,\n",
+    "            module_name,\n",
+    "            steps,\n",
+    "            params,\n",
+    "            track_experiment,\n",
+    "        )\n",
+    "    except ValueError as ve:\n",
+    "        print(f\"Sagemaker conversion failed for {nb_name}, \\nReason: {ve}\")\n",
+    "        return\n",
     "    if not silent:\n",
     "        print(\n",
     "            f\"Converted {nb_name} to {pipeline_class_name} in: {os.path.basename(flow_path)}\"\n",
@@ -243,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,6 +332,7 @@
     "        flow_file.write(f\"{ind}steps = {[s.name for s in steps]}\\n\")\n",
     "        flow_file.write(\"\\n\")\n",
     "        steps_param_meta, steps_vars = write_steps(\n",
+    "            flow_path,\n",
     "            lib_name,\n",
     "            module_name,\n",
     "            fq_module_name,\n",
@@ -398,11 +396,12 @@
     "        if not flow_reqs_path.exists():\n",
     "            shutil.copyfile(lib_reqs_path, flow_reqs_path)\n",
     "        flow_file.write(\n",
-    "            f'{ind}{ind}self.s3_client.upload_file(\"requirements.txt\", self.bucket, f\"{{self.s3_prefix}}/requirements.txt\")\\n'\n",
+    "            f'{ind}{ind}self.s3_client.upload_file(\"{flow_reqs_path}\", self.bucket, f\"{{self.s3_prefix}}/requirements.txt\")\\n'\n",
     "        )\n",
     "        for proc_step in proc_steps:\n",
+    "            step_module = f\"{extract_module_only(module_name)}_{proc_step.name}.py\"\n",
     "            flow_file.write(\n",
-    "                f'{ind}{ind}self.s3_client.upload_file(\"{extract_module_only(module_name)}_{proc_step.name}.py\", self.bucket, f\"{{self.s3_prefix}}/code/{extract_module_only(module_name)}_{proc_step.name}.py\")\\n'\n",
+    "                f'{ind}{ind}self.s3_client.upload_file(\"{Path(lib_path(), config.flows_path, \"sagemaker\", step_module)}\", self.bucket, f\"{{self.s3_prefix}}/code/{step_module}\")\\n'\n",
     "            )\n",
     "        modules_dir = Path(lib_path(), config.lib_name)\n",
     "        flow_file.write(\n",
@@ -452,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +473,6 @@
     "\n",
     "def write_params(flow_file, param_meta, ind):\n",
     "    for param in param_meta.keys():\n",
-    "        print(param, param_meta[param].instance_type)\n",
     "        if param_meta[param].instance_type == int:\n",
     "            flow_file.write(\n",
     "                f\"{ind}{param} = ParameterInteger(name='{param}', default_value={param})\\n\"\n",
@@ -499,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,6 +742,7 @@
     "\n",
     "\n",
     "def write_steps(\n",
+    "    flow_path,\n",
     "    lib_name,\n",
     "    module_name,\n",
     "    fq_module_name,\n",
@@ -880,7 +879,7 @@
     "                flow_file.write(\n",
     "                    f'{ind}{ind}{ind}entry_point=\"{module_local_name}_{step.name}.py\",\\n'\n",
     "                )\n",
-    "                flow_file.write(f'{ind}{ind}{ind}source_dir=\".\",\\n')\n",
+    "                flow_file.write(f'{ind}{ind}{ind}source_dir=\"{flow_path.parent}\",\\n')\n",
     "                # Repeated code - refactor\n",
     "                step_param_meta = {k: param_meta[k] for k in step_vars[\"step_input\"]}\n",
     "                steps_param_meta[step.name] = step_param_meta\n",
@@ -944,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -966,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -986,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1008,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1019,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1041,7 +1040,7 @@
     "    ind = \"    \"\n",
     "    module_path = Path(lib_path(), lib_name, f\"{module_name.replace('.', '/')}.py\")\n",
     "\n",
-    "    # Pass these in instead of replacting..\n",
+    "    # Pass these in instead of replacing..\n",
     "    fq_module_name = f\"{lib_name}.{module_name}\"\n",
     "    extract_param_meta(fq_module_name, params)\n",
     "    # TODO needs to be step specific\n",
@@ -1199,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1274,7 +1273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1285,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1294,17 +1293,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "traffic_percent <class 'int'>\n",
-      "workers <class 'int'>\n",
-      "model_level <class 'str'>\n",
-      "min_date <class 'str'>\n",
+      "<_io.TextIOWrapper name='/home/sagemaker-user/git/sciflow/nbs/test/flows/sagemaker/test_multistep.py' mode='w' encoding='UTF-8'>\n",
       "Converted test_multistep.ipynb to TestMultistepPipeline in: test_multistep.py\n",
       "Created sagemaker module: test_multistep_something.py\n",
       "Created sagemaker module: test_multistep_preprocess.py\n",
@@ -1314,132 +1310,7 @@
     }
    ],
    "source": [
-    "nb_to_sagemaker_pipeline(\n",
-    "    nb_path, flow_path, config, silent=False, track_experiment=False\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 136,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nb_paths = nbglob(recursive=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 137,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_paths = [\n",
-    "    Path(\"/home/sagemaker-user/git/sciflow/nbs/test/test_multistep.ipynb\"),\n",
-    "    Path(\"/home/sagemaker-user/git/sciflow/nbs/test/test_export.ipynb\"),\n",
-    "    Path(\"/home/sagemaker-user/git/sciflow/nbs/test/test_module.ipynb\"),\n",
-    "    Path(\"/home/sagemaker-user/git/sciflow/nbs/test/test_multistep_no_params.ipynb\"),\n",
-    "    Path(\"/home/sagemaker-user/git/sciflow/nbs/test/test_data_handling.ipynb\"),\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 138,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "some_params <class 'int'>\n",
-      "some_param <class 'str'>\n",
-      "input_path <class 'str'>\n",
-      "model_path <class 'str'>\n",
-      "Converted test_export.ipynb to TestExportPipeline in: test_export.py\n",
-      "Created sagemaker module: test_export_first.py\n",
-      "Created sagemaker module: test_export_preprocess.py\n",
-      "Created sagemaker module: test_export_train.py\n",
-      "Created sagemaker module: test_export_last.py\n"
-     ]
-    }
-   ],
-   "source": [
-    "test_path = Path(\"/home/sagemaker-user/git/sciflow/nbs/test/test_export.ipynb\")\n",
-    "nb_to_sagemaker_pipeline(\n",
-    "    test_path,\n",
-    "    get_flow_path(test_path, flow_provider=\"sagemaker\"),\n",
-    "    config,\n",
-    "    silent=False,\n",
-    "    track_experiment=False,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 143,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "int_param <class 'int'>\n",
-      "float_param <class 'float'>\n",
-      "str_param <class 'str'>\n",
-      "input_path <class 'pathlib.PosixPath'>\n",
-      "model_path <class 'pathlib.PosixPath'>\n",
-      "dict_param <class 'dict'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "raised_error = False\n",
-    "try:\n",
-    "    test_path = Path(\n",
-    "        \"/home/sagemaker-user/git/sciflow/nbs/test/test_data_handling.ipynb\"\n",
-    "    )\n",
-    "    nb_to_sagemaker_pipeline(\n",
-    "        test_path,\n",
-    "        get_flow_path(test_path, flow_provider=\"sagemaker\"),\n",
-    "        config,\n",
-    "        silent=False,\n",
-    "        track_experiment=False,\n",
-    "    )\n",
-    "except ValueError:\n",
-    "    raised_error = True\n",
-    "assert raised_error"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 145,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No params cell found for: test_multistep_no_params.ipynb\n"
-     ]
-    }
-   ],
-   "source": [
-    "raised_error = False\n",
-    "try:\n",
-    "    test_path = Path(\n",
-    "        \"/home/sagemaker-user/git/sciflow/nbs/test/test_multistep_no_params.ipynb\"\n",
-    "    )\n",
-    "    nb_to_sagemaker_pipeline(\n",
-    "        test_path,\n",
-    "        get_flow_path(test_path, flow_provider=\"sagemaker\"),\n",
-    "        config,\n",
-    "        silent=False,\n",
-    "        track_experiment=False,\n",
-    "    )\n",
-    "except ValueError:\n",
-    "    raised_error = True\n",
-    "assert raised_error"
+    "nb_to_sagemaker_pipeline(nb_path, flow_path, silent=False, track_experiment=False)"
    ]
   },
   {
@@ -1451,37 +1322,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Skipping sagemaker conversion - no steps found\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "nb_to_sagemaker_pipeline(\"packaging.ipynb\", get_flow_path(\"packaging.ipynb\"), config)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
     "\n",
     "\n",
-    "def generate_flows(config, track_experiment=True):\n",
+    "def generate_flows(track_experiment=True):\n",
     "    nb_paths = nbglob(recursive=True)\n",
     "    for nb_path in nb_paths:\n",
     "        nb_to_sagemaker_pipeline(\n",
     "            nb_path,\n",
     "            get_flow_path(nb_path, flow_provider=\"sagemaker\"),\n",
-    "            config,\n",
     "            silent=False,\n",
     "            track_experiment=False,\n",
     "        )"
@@ -1489,7 +1351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1498,7 +1360,57 @@
     "\n",
     "@call_parse\n",
     "def sciflow_sagemaker(track: Param(\"Track flows as sacred experiments\", bool) = True):\n",
-    "    generate_flows(get_config(), track)"
+    "    generate_flows(track)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<_io.TextIOWrapper name='/home/sagemaker-user/git/sciflow/nbs/test/flows/sagemaker/test_multistep.py' mode='w' encoding='UTF-8'>\n",
+      "Converted test_multistep.ipynb to TestMultistepPipeline in: test_multistep.py\n",
+      "Created sagemaker module: test_multistep_something.py\n",
+      "Created sagemaker module: test_multistep_preprocess.py\n",
+      "Created sagemaker module: test_multistep_fit.py\n",
+      "Created sagemaker module: test_multistep_evaluate.py\n",
+      "<_io.TextIOWrapper name='/home/sagemaker-user/git/sciflow/nbs/test/flows/sagemaker/test_export.py' mode='w' encoding='UTF-8'>\n",
+      "Converted test_export.ipynb to TestExportPipeline in: test_export.py\n",
+      "Created sagemaker module: test_export_first.py\n",
+      "Created sagemaker module: test_export_preprocess.py\n",
+      "Created sagemaker module: test_export_train.py\n",
+      "Created sagemaker module: test_export_last.py\n",
+      "<_io.TextIOWrapper name='/home/sagemaker-user/git/sciflow/nbs/test/flows/sagemaker/test_module.py' mode='w' encoding='UTF-8'>\n",
+      "Converted test_module.ipynb to TestModulePipeline in: test_module.py\n",
+      "Created sagemaker module: test_module_first.py\n",
+      "No params cell found for: test_multistep_no_params.ipynb\n",
+      "<_io.TextIOWrapper name='/home/sagemaker-user/git/sciflow/nbs/test/flows/sagemaker/test_multistep_no_params.py' mode='w' encoding='UTF-8'>\n",
+      "Sagemaker conversion failed for test_multistep_no_params.ipynb, \n",
+      "Reason: Step: preprocess depends on variable(s), \"{'min_date', 'model_level', 'traffic_percent'}\", which are not in the flow scope\n",
+      "Sagemaker conversion failed for test_data_handling.ipynb, \n",
+      "Reason: Unsupported parameter type for sagemaker pipeline: ParamMeta(instance_type=<class 'dict'>, is_scalar=False, is_json_type=True, persist_type='pickle', has_metaflow_param=True, has_sagemaker_param=False)\n"
+     ]
+    }
+   ],
+   "source": [
+    "generate_flows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# os.environ['USER'] = 'e02079'\n",
+    "# os.environ['SCIFLOW_BUCKET'] = 'pprsandboxpdlras3'\n",
+    "# test_nb = Path('test/test_multistep.ipynb')\n",
+    "# os.chdir('/home/sagemaker-user/git/sciflow/nbs/test/flows/sagemaker')\n",
+    "# run_flow(test_nb, flow_provider = \"sagemaker\", flow_command = \"show\")"
    ]
   },
   {
@@ -1506,9 +1418,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# generate_flows(get_config(cfg_name=\"test/settings.ini\"))"
-   ]
+   "source": []
   }
  ],
  "metadata": {
