--- a/nbs/utils.ipynb
+++ b/nbs/utils.ipynb
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,6 @@
     "def prepare_env(env_file_path: str = None):\n",
     "    if env_file_path is None:\n",
     "        env_file_path = os.path.expanduser(\"~/.sciflow/env\")\n",
-    "    # TODO create this for user\n",
     "    if not os.path.exists(env_file_path):\n",
     "        raise EnvironmentError(\n",
     "            f\"You need to create a Sciflow environment vars file at: {env_file_path}\"\n",
@@ -302,10 +301,54 @@
     "assert type(conn) == pyodbc.Connection\n",
     "assert query(conn, \"SELECT 1 AS test_col\")[\"test_col\"].iloc[0] == 1"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Flows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
+    "def get_module_name(nb_path):\n",
+    "    nb = read_nb(nb_path)\n",
+    "    module_name = find_default_export(nb[\"cells\"])\n",
+    "    return module_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
+    "def get_flow_path(nb_path, config=None, flow_provider=\"metaflow\"):\n",
+    "    module_name = get_module_name(nb_path)\n",
+    "    if module_name is None:\n",
+    "        return None\n",
+    "    if config is None:\n",
+    "        config = get_config()\n",
+    "    flows_dir = Path(config.path(\"flows_path\"), flow_provider)\n",
+    "    if not flows_dir.exists():\n",
+    "        flows_dir.mkdir()\n",
+    "\n",
+    "    return Path(flows_dir, f\"{module_name.split('.')[-1]}.py\")"
+   ]
   }
  ],
  "metadata": {
-  "instance_type": "ml.t3.medium",
+  "instance_type": "ml.m5.xlarge",
   "kernelspec": {
    "display_name": "sciflow (sciflow/3)",
    "language": "python",
