--- a/nbs/to_metaflow.ipynb
+++ b/nbs/to_metaflow.ipynb
@@ -44,7 +44,7 @@
     "from sciflow.data_handler import extract_param_meta\n",
     "from sciflow.params import params_as_dict\n",
     "from sciflow.parse_module import FuncDetails, extract_steps\n",
-    "from sciflow.utils import prepare_env"
+    "from sciflow.utils import get_flow_path, prepare_env"
    ]
   },
   {
@@ -552,21 +552,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# export\n",
-    "\n",
-    "\n",
-    "def get_module_name(nb_path):\n",
-    "    nb = read_nb(nb_path)\n",
-    "    module_name = find_default_export(nb[\"cells\"])\n",
-    "    return module_name"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -575,29 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# export\n",
-    "\n",
-    "\n",
-    "def get_flow_path(nb_path, config=None, flow_provider=\"metaflow\"):\n",
-    "    module_name = get_module_name(nb_path)\n",
-    "    if module_name is None:\n",
-    "        return None\n",
-    "    if config is None:\n",
-    "        config = get_config()\n",
-    "    flows_dir = Path(config.path(\"flows_path\"), flow_provider)\n",
-    "    if not flows_dir.exists():\n",
-    "        flows_dir.mkdir()\n",
-    "\n",
-    "    return Path(flows_dir, f\"{module_name.split('.')[-1]}.py\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -625,14 +588,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Converted test_clustering.ipynb to TestClusteringFlow in: test_clustering.py\n"
+      "Converted test_multistep.ipynb to TestMultistepFlow in: test_multistep.py\n"
      ]
     }
    ],
@@ -658,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,14 +630,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
     "\n",
     "\n",
-    "def generate_flows(config, track_experiment=True):\n",
+    "def generate_flows(config=None, track_experiment=True):\n",
     "    nb_paths = nbglob(recursive=True)\n",
     "    for nb_path in nb_paths:\n",
     "        nb_to_metaflow(\n",
@@ -687,51 +650,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No params cell found for: test_clustering_no_params.ipynb\n",
-      "Converted test_clustering_no_params.ipynb to TestClusteringNoParamsFlow in: test_clustering_no_params.py\n",
+      "Converted test_multistep.ipynb to TestMultistepFlow in: test_multistep.py\n",
       "Converted test_export.ipynb to TestExportFlow in: test_export.py\n",
       "Converted test_module.ipynb to TestModuleFlow in: test_module.py\n",
-      "Converted test_data_handling.ipynb to TestDataHandlingFlow in: test_data_handling.py\n",
-      "Converted test_clustering.ipynb to TestClusteringFlow in: test_clustering.py\n"
+      "No params cell found for: test_multistep_no_params.ipynb\n",
+      "Converted test_multistep_no_params.ipynb to TestMultistepNoParamsFlow in: test_multistep_no_params.py\n",
+      "Converted test_data_handling.ipynb to TestDataHandlingFlow in: test_data_handling.py\n"
      ]
     }
    ],
    "source": [
-    "generate_flows(get_config(cfg_name=\"test/settings.ini\"))"
+    "generate_flows()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No params cell found for: test_clustering_no_params.ipynb\n",
-      "Converted test_clustering_no_params.ipynb to TestClusteringNoParamsFlow in: test_clustering_no_params.py\n",
+      "Converted test_multistep.ipynb to TestMultistepFlow in: test_multistep.py\n",
       "Converted test_export.ipynb to TestExportFlow in: test_export.py\n",
       "Converted test_module.ipynb to TestModuleFlow in: test_module.py\n",
-      "Converted test_data_handling.ipynb to TestDataHandlingFlow in: test_data_handling.py\n",
-      "Converted test_clustering.ipynb to TestClusteringFlow in: test_clustering.py\n"
+      "No params cell found for: test_multistep_no_params.ipynb\n",
+      "Converted test_multistep_no_params.ipynb to TestMultistepNoParamsFlow in: test_multistep_no_params.py\n",
+      "Converted test_data_handling.ipynb to TestDataHandlingFlow in: test_data_handling.py\n"
      ]
     }
    ],
    "source": [
-    "generate_flows(get_config(cfg_name=\"test/settings.ini\"), track_experiment=False)"
+    "generate_flows(track_experiment=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -754,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -799,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -835,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -857,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -869,18 +832,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "check_flows(get_config(cfg_name=\"test/settings.ini\"), ignore_suffix=None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# slow\n",
     "\n",
@@ -889,20 +874,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
     "\n",
     "\n",
-    "def run_flow(nb_path, params=None):\n",
-    "    flow_path = get_flow_path(nb_path)\n",
+    "def run_flow(\n",
+    "    nb_path, params=None, flow_provider=\"metaflow\", flow_command=\"--no-pylint run\"\n",
+    "):\n",
+    "    flow_path = get_flow_path(nb_path, flow_provider=flow_provider)\n",
     "    print(f\"Running flow: {os.path.basename(flow_path)}\")\n",
     "    ret_code, output = check_flow(\n",
     "        flow_path.parent,\n",
     "        os.path.basename(flow_path),\n",
-    "        flow_command=\"--no-pylint run\",\n",
+    "        flow_command=flow_command,\n",
     "        params=params,\n",
     "    )\n",
     "    return ret_code, output"
@@ -910,9 +897,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running flow: test_multistep.py\n",
+      "Metaflow 2.5.2 executing TestMultistepFlow for user:'Donal Simmie'\n",
+      "Validating your flow...\n",
+      "    The graph looks good!\n",
+      "2022-04-15 14:49:34.787 Workflow starting (run-id 1650034174524893):\n",
+      "2022-04-15 14:49:34.848 [1650034174524893/start/1 (pid 22412)] Task is starting.\n",
+      "2022-04-15 14:49:36.262 [1650034174524893/start/1 (pid 22412)] The first step\n",
+      "2022-04-15 14:49:36.666 [1650034174524893/start/1 (pid 22412)] Task finished successfully.\n",
+      "2022-04-15 14:49:36.748 [1650034174524893/preprocess/2 (pid 22419)] Task is starting.\n",
+      "2022-04-15 14:49:38.170 [1650034174524893/preprocess/2 (pid 22419)] I captialised the message: THE FIRST STEP\n",
+      "2022-04-15 14:49:38.601 [1650034174524893/preprocess/2 (pid 22419)] Task finished successfully.\n",
+      "2022-04-15 14:49:38.683 [1650034174524893/fit/3 (pid 22426)] Task is starting.\n",
+      "2022-04-15 14:49:40.515 [1650034174524893/fit/3 (pid 22426)] Task finished successfully.\n",
+      "2022-04-15 14:49:40.593 [1650034174524893/evaluate/4 (pid 22433)] Task is starting.\n",
+      "2022-04-15 14:49:42.455 [1650034174524893/evaluate/4 (pid 22433)] Task finished successfully.\n",
+      "2022-04-15 14:49:42.531 [1650034174524893/end/5 (pid 22440)] Task is starting.\n",
+      "2022-04-15 14:49:44.416 [1650034174524893/end/5 (pid 22440)] Task finished successfully.\n",
+      "2022-04-15 14:49:44.431 Done!\n"
+     ]
+    }
+   ],
    "source": [
     "# slow\n",
     "\n",
@@ -936,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -971,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -987,9 +999,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Task pending name='Task-4' coro=<run_flow_task() running at /tmp/ipykernel_22384/1238802591.py:4>>"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# slow\n",
     "\n",
@@ -1002,9 +1025,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\"python '/home/sagemaker-user/git/sciflow/nbs/test/flows/metaflow/test_multistep.py' --no-pylint run --traffic_percent 10 --workers 12\" exited with 0]\n",
+      "[stdout]\n",
+      "2022-04-15 14:49:46.509 Workflow starting (run-id 1650034186248371):\n",
+      "2022-04-15 14:49:46.573 [1650034186248371/start/1 (pid 22456)] Task is starting.\n",
+      "2022-04-15 14:49:47.983 [1650034186248371/start/1 (pid 22456)] The first step\n",
+      "2022-04-15 14:49:48.378 [1650034186248371/start/1 (pid 22456)] Task finished successfully.\n",
+      "2022-04-15 14:49:48.463 [1650034186248371/preprocess/2 (pid 22463)] Task is starting.\n",
+      "2022-04-15 14:49:49.887 [1650034186248371/preprocess/2 (pid 22463)] I captialised the message: THE FIRST STEP\n",
+      "2022-04-15 14:49:50.324 [1650034186248371/preprocess/2 (pid 22463)] Task finished successfully.\n",
+      "2022-04-15 14:49:50.405 [1650034186248371/fit/3 (pid 22470)] Task is starting.\n",
+      "2022-04-15 14:49:52.237 [1650034186248371/fit/3 (pid 22470)] Task finished successfully.\n",
+      "2022-04-15 14:49:52.317 [1650034186248371/evaluate/4 (pid 22477)] Task is starting.\n",
+      "2022-04-15 14:49:54.152 [1650034186248371/evaluate/4 (pid 22477)] Task finished successfully.\n",
+      "2022-04-15 14:49:54.228 [1650034186248371/end/5 (pid 22484)] Task is starting.\n",
+      "2022-04-15 14:49:56.110 [1650034186248371/end/5 (pid 22484)] Task finished successfully.\n",
+      "2022-04-15 14:49:56.126 Done!\n",
+      "[stderr]\n",
+      "Metaflow 2.5.2 executing TestMultistepFlow for user:'Donal Simmie'\n",
+      "Validating your flow...\n",
+      "    The graph looks good!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# slow\n",
     "await task"
@@ -1012,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1025,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1048,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1059,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1077,7 +1137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1089,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1109,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1134,9 +1194,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[True, True]"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# slow\n",
     "\n",
@@ -1145,9 +1216,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 0]"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# slow\n",
     "\n",
@@ -1165,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1179,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
