Changed from check_flow to check_call_flow. Sagemaker check functions working

--- a/nbs/parse_module.ipynb
+++ b/nbs/parse_module.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,13 +199,43 @@
     "    data = get_utterances(conn, model_level, min_date, traffic_percent)\n",
     "    button_filter = get_button_responses_filter(conn)\n",
     "    user_texts = data[~data.Utterance.isin(button_filter)].copy()\n",
-    "    documents = user_texts.Utterance.tolist()\n",
+    "    documents = {\"some_field\": user_texts.Utterance.tolist()}\n",
     "    return documents\n",
     "\"\"\"\n",
     "\n",
+    "multiple_key_return = \"\"\"\n",
+    "def evaluate(model):\n",
+    "    topic_words, word_scores, topic_nums = model.get_topics(model.get_num_topics())\n",
+    "\n",
+    "    topic_contains_non_empty_words = all([len(tw) > 0 for tw in topic_words])\n",
+    "    word_scores_in_range = word_scores.min() >= 0.0 and word_scores.max() <= 1.0\n",
+    "    as_many_items_as_topics = (\n",
+    "        model.get_num_topics() == len(topic_words) == word_scores.shape[0]\n",
+    "    )\n",
+    "    word_summaries = (\n",
+    "        topic_contains_non_empty_words\n",
+    "        and word_scores_in_range\n",
+    "        and as_many_items_as_topics\n",
+    "    )\n",
+    "    # You can add artifacts in a step that will be saved to block storage. Add the paths to the file on the local filesystem\n",
+    "    # and the artifact will be uploaded to remote storage.\n",
+    "    sample_df = pd.DataFrame(\n",
+    "        {\"a\": model.get_topic_sizes()[0], \"b\": model.get_topic_sizes()[1]}\n",
+    "    )\n",
+    "    sample_df.to_csv(\"/tmp/dataframe_artifact.csv\", index=False)\n",
+    "    artifacts = [\"/tmp/dataframe_artifact.csv\"]\n",
+    "    # You can add step metrics too this time just add a list of 3-tuples where tuple order = (name, value, step)\n",
+    "    metrics = [(\"mae\", 100, 0), (\"mae\", 67, 1), (\"mae\", 32, 2)]\n",
+    "    results = {\n",
+    "        \"word_summaries\": word_summaries,\n",
+    "        \"artifacts\": artifacts,\n",
+    "        \"metrics\": metrics,\n",
+    "    }\n",
+    "    return results\n",
+    "\"\"\"\n",
     "unnamed_return = \"\"\"\n",
     "def fit(documents, workers=workers, speed=\"fast-learn\"):\n",
-    "    return Top2Vec(documents, workers=workers, speed=speed)\n",
+    "    return {Top2Vec(documents, workers=workers, speed=speed)}\n",
     "\"\"\"\n",
     "\n",
     "number_return = \"\"\"\n",
@@ -216,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +315,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
+    "def extract_return_var_names(step):\n",
+    "    results_index = step.code.find(f\"{step.return_stmt} =\")\n",
+    "    if results_index == -1:\n",
+    "        return []\n",
+    "    \n",
+    "    keys = []\n",
+    "    for l in step.code[results_index:].split(\"\\n\"):\n",
+    "        if l.strip().find(\":\") > -1:\n",
+    "            key_prefix = l.split(\":\")[0]\n",
+    "            key = key_prefix[key_prefix.find('{')+1:]\n",
+    "            keys.append(key.strip(' \",'))\n",
+    "    return keys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert ['some_field'] == extract_return_var_names(parse_step(named_return))\n",
+    "assert ['word_summaries', 'artifacts', 'metrics'] == extract_return_var_names(parse_step(multiple_key_return))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +422,7 @@
        "  '    return one')]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
