--- a/nbs/to_sagemaker.ipynb
+++ b/nbs/to_sagemaker.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,9 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -21,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,13 +48,13 @@
     "from sciflow.data_handler import extract_param_meta\n",
     "from sciflow.packaging import determine_dependencies\n",
     "from sciflow.params import params_as_dict\n",
-    "from sciflow.parse_module import FuncDetails, extract_steps\n",
+    "from sciflow.parse_module import FuncDetails, extract_steps, extract_return_var_names\n",
     "from sciflow.utils import get_flow_path, lib_path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +107,7 @@
        "Path('/home/sagemaker-user/git/sciflow/nbs/test/flows/sagemaker/test_multistep.py')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,9 +272,9 @@
     "\n",
     "    # TODO - add to profiles or accept as params from papermill\n",
     "    proc_image_uri = \"368653567616.dkr.ecr.eu-west-1.amazonaws.com/sagemaker-training-custom:conda-env-training\"\n",
-    "    proc_instance_type = \"ml.t3.medium\"\n",
+    "    proc_instance_type = \"ml.m5.xlarge\"\n",
     "    train_image_uri = \"368653567616.dkr.ecr.eu-west-1.amazonaws.com/sagemaker-training-custom:conda-env-training\"\n",
-    "    train_instance_type = \"ml.m5.large\"\n",
+    "    train_instance_type = \"ml.m5.xlarge\"\n",
     "\n",
     "    with open(flow_path, \"w\") as flow_file:\n",
     "        flow_file.write(\"#!/usr/bin/env python\\n\")\n",
@@ -283,11 +292,19 @@
     "        flow_file.write(\"from sagemaker.workflow.pipeline import Pipeline\\n\")\n",
     "\n",
     "        has_train_step = any([is_train_step(s) for s in steps])\n",
-    "        has_processing_step = sum([is_processing_step(s) for s in steps]) != len(steps)\n",
+    "        has_processing_step = any([is_processing_step(s) for s in steps])\n",
     "\n",
     "        if has_train_step and has_processing_step:\n",
     "            flow_file.write(\n",
     "                \"from sagemaker.workflow.steps import ProcessingStep, TrainingStep\\n\"\n",
+    "            )\n",
+    "        elif has_train_step:\n",
+    "            flow_file.write(\n",
+    "                \"from sagemaker.workflow.steps import TrainingStep\\n\"\n",
+    "            )\n",
+    "        elif has_processing_step:\n",
+    "            flow_file.write(\n",
+    "                \"from sagemaker.workflow.steps import ProcessingStep\\n\"\n",
     "            )\n",
     "        if has_processing_step:\n",
     "            flow_file.write(\n",
@@ -399,7 +416,7 @@
     "            f'{ind}{ind}self.s3_client.upload_file(\"{flow_reqs_path}\", self.bucket, f\"{{self.s3_prefix}}/requirements.txt\")\\n'\n",
     "        )\n",
     "        for proc_step in proc_steps:\n",
-    "            step_module = f\"{extract_module_only(module_name)}_{proc_step.name}.py\"\n",
+    "            step_module = f\"_sciflow_{extract_module_only(module_name)}_{proc_step.name}.py\"\n",
     "            flow_file.write(\n",
     "                f'{ind}{ind}self.s3_client.upload_file(\"{Path(lib_path(), config.flows_path, \"sagemaker\", step_module)}\", self.bucket, f\"{{self.s3_prefix}}/code/{step_module}\")\\n'\n",
     "            )\n",
@@ -415,6 +432,7 @@
     "        flow_file.write(f\"{ind}def show(self):\\n\")\n",
     "        flow_file.write(f\"{ind}{ind}self.init()\\n\")\n",
     "        flow_file.write(f\"{ind}{ind}pipeline = self.get_pipeline()\\n\")\n",
+    "        flow_file.write(f\"{ind}{ind}pipeline.upsert(role_arn=self.role)\\n\")\n",
     "        flow_file.write(f\"{ind}{ind}description = pipeline.describe()\\n\")\n",
     "        flow_file.write(f'{ind}{ind}print(\"Sciflow generated pipeline is valid\")\\n')\n",
     "        flow_file.write(\n",
@@ -451,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -712,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -766,7 +784,7 @@
     "    module_local_name = extract_module_only(module_name)\n",
     "\n",
     "    for i, step in enumerate(steps):\n",
-    "        return_vars = get_return_var_names(step)\n",
+    "        return_vars = extract_return_var_names(step)\n",
     "\n",
     "        step_vars = extract_step_vars(\n",
     "            step, param_names, proc_flow_scope, train_flow_scope\n",
@@ -786,7 +804,7 @@
     "            flow_file.write(f'{ind}{ind}{ind}name = \"{step.name}\",\\n')\n",
     "            flow_file.write(f\"{ind}{ind}{ind}processor = script_processor,\\n\")\n",
     "            flow_file.write(\n",
-    "                f'{ind}{ind}{ind}code = f\"{{self.flow_s3_uri}}/code/{module_local_name}_{step.name}.py\",\\n'\n",
+    "                f'{ind}{ind}{ind}code = f\"{{self.flow_s3_uri}}/code/_sciflow_{module_local_name}_{step.name}.py\",\\n'\n",
     "            )\n",
     "            job_arg_pairs = [\n",
     "                (\"--lib_name\", f'\"{lib_name}\"'),\n",
@@ -873,13 +891,14 @@
     "                )\n",
     "                flow_file.write(f\"\\n\")\n",
     "                flow_file.write(f\"{ind}{ind}estimator = Estimator(\\n\")\n",
+    "                # TODO extract train_image_uri\n",
     "                flow_file.write(\n",
-    "                    f'{ind}{ind}{ind}image_uri = \"368653567616.dkr.ecr.eu-west-1.amazonaws.com/sagemaker-training-custom:conda-env-training\",\\n'\n",
+    "                    f'{ind}{ind}{ind}image_uri = \"{train_image_uri}\",\\n'\n",
     "                )\n",
     "                flow_file.write(\n",
-    "                    f'{ind}{ind}{ind}entry_point=\"{module_local_name}_{step.name}.py\",\\n'\n",
+    "                    f'{ind}{ind}{ind}entry_point = \"_sciflow_{module_local_name}_{step.name}.py\",\\n'\n",
     "                )\n",
-    "                flow_file.write(f'{ind}{ind}{ind}source_dir=\"{flow_path.parent}\",\\n')\n",
+    "                flow_file.write(f'{ind}{ind}{ind}source_dir = \"{flow_path.parent}\",\\n')\n",
     "                # Repeated code - refactor\n",
     "                step_param_meta = {k: param_meta[k] for k in step_vars[\"step_input\"]}\n",
     "                steps_param_meta[step.name] = step_param_meta\n",
@@ -889,14 +908,14 @@
     "                }\n",
     "                if len(step_vars[\"step_input\"]) > 0:\n",
     "                    hyper_params.update(format_hyperparams(step_param_meta))\n",
-    "                flow_file.write(f\"{ind}{ind}{ind}hyperparameters={{\\n\")\n",
+    "                flow_file.write(f\"{ind}{ind}{ind}hyperparameters = {{\\n\")\n",
     "                for key, val in hyper_params.items():\n",
     "                    flow_file.write(f'{ind}{ind}{ind}{ind}\"{key}\": {val},\\n')\n",
     "                flow_file.write(f\"{ind}{ind}{ind}}},\\n\")\n",
-    "                flow_file.write(f'{ind}{ind}{ind}instance_type=\"ml.m5.xlarge\",\\n')\n",
-    "                flow_file.write(f\"{ind}{ind}{ind}instance_count=1,\\n\")\n",
-    "                flow_file.write(f\"{ind}{ind}{ind}output_path=self.flow_s3_uri,\\n\")\n",
-    "                flow_file.write(f'{ind}{ind}{ind}base_job_name=\"{step.name}\",\\n')\n",
+    "                flow_file.write(f'{ind}{ind}{ind}instance_type = \"{train_instance_type}\",\\n')\n",
+    "                flow_file.write(f\"{ind}{ind}{ind}instance_count = 1,\\n\")\n",
+    "                flow_file.write(f\"{ind}{ind}{ind}output_path = self.flow_s3_uri,\\n\")\n",
+    "                flow_file.write(f'{ind}{ind}{ind}base_job_name = \"{step.name}\",\\n')\n",
     "                flow_file.write(\n",
     "                    f'{ind}{ind}{ind}code_location = f\"{{self.flow_s3_uri}}/code\",\\n'\n",
     "                )\n",
@@ -943,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -965,27 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# export\n",
-    "\n",
-    "\n",
-    "def get_return_var_names(step):\n",
-    "    results_index = step.code.find(\"results =\")\n",
-    "    if results_index == -1:\n",
-    "        return []\n",
-    "    return [\n",
-    "        l.split(\":\")[1].strip(\", \\}\")\n",
-    "        for l in step.code[results_index:].split(\"\\n\")\n",
-    "        if l.strip().find(\":\") > -1\n",
-    "    ]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1007,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1018,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1058,7 +1057,8 @@
     "    lib_refs = [l.replace(\"..\", f\"{lib_name}.\") for l in lib_refs]\n",
     "\n",
     "    for step in steps:\n",
-    "        sm_module_path = Path(str(flow_path).replace(\".py\", f\"_{step.name}.py\"))\n",
+    "        sm_module_path = Path(flow_path.parent, \"_sciflow_\" + flow_path.stem + f\"_{step.name}.py\")\n",
+    "        \n",
     "        with open(sm_module_path, \"w\") as sm_module_file:\n",
     "            sm_module_file.write(\"\".join(lines))\n",
     "            sm_module_file.write(\"\\n\\n# SCIFLOW->SAGEMAKER ADAPTER FROM THIS POINT\\n\")\n",
@@ -1198,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1273,7 +1273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1284,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1293,19 +1293,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<_io.TextIOWrapper name='/home/sagemaker-user/git/sciflow/nbs/test/flows/sagemaker/test_multistep.py' mode='w' encoding='UTF-8'>\n",
       "Converted test_multistep.ipynb to TestMultistepPipeline in: test_multistep.py\n",
-      "Created sagemaker module: test_multistep_something.py\n",
-      "Created sagemaker module: test_multistep_preprocess.py\n",
-      "Created sagemaker module: test_multistep_fit.py\n",
-      "Created sagemaker module: test_multistep_evaluate.py\n"
+      "Created sagemaker module: _sciflow_test_multistep_something.py\n",
+      "Created sagemaker module: _sciflow_test_multistep_preprocess.py\n",
+      "Created sagemaker module: _sciflow_test_multistep_fit.py\n",
+      "Created sagemaker module: _sciflow_test_multistep_evaluate.py\n"
      ]
     }
    ],
@@ -1322,7 +1321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1331,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1351,7 +1350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1365,32 +1364,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<_io.TextIOWrapper name='/home/sagemaker-user/git/sciflow/nbs/test/flows/sagemaker/test_multistep.py' mode='w' encoding='UTF-8'>\n",
       "Converted test_multistep.ipynb to TestMultistepPipeline in: test_multistep.py\n",
-      "Created sagemaker module: test_multistep_something.py\n",
-      "Created sagemaker module: test_multistep_preprocess.py\n",
-      "Created sagemaker module: test_multistep_fit.py\n",
-      "Created sagemaker module: test_multistep_evaluate.py\n",
-      "<_io.TextIOWrapper name='/home/sagemaker-user/git/sciflow/nbs/test/flows/sagemaker/test_export.py' mode='w' encoding='UTF-8'>\n",
+      "Created sagemaker module: _sciflow_test_multistep_something.py\n",
+      "Created sagemaker module: _sciflow_test_multistep_preprocess.py\n",
+      "Created sagemaker module: _sciflow_test_multistep_fit.py\n",
+      "Created sagemaker module: _sciflow_test_multistep_evaluate.py\n",
       "Converted test_export.ipynb to TestExportPipeline in: test_export.py\n",
-      "Created sagemaker module: test_export_first.py\n",
-      "Created sagemaker module: test_export_preprocess.py\n",
-      "Created sagemaker module: test_export_train.py\n",
-      "Created sagemaker module: test_export_last.py\n",
-      "<_io.TextIOWrapper name='/home/sagemaker-user/git/sciflow/nbs/test/flows/sagemaker/test_module.py' mode='w' encoding='UTF-8'>\n",
+      "Created sagemaker module: _sciflow_test_export_first.py\n",
+      "Created sagemaker module: _sciflow_test_export_preprocess.py\n",
+      "Created sagemaker module: _sciflow_test_export_train.py\n",
+      "Created sagemaker module: _sciflow_test_export_last.py\n",
       "Converted test_module.ipynb to TestModulePipeline in: test_module.py\n",
-      "Created sagemaker module: test_module_first.py\n",
+      "Created sagemaker module: _sciflow_test_module_first.py\n",
       "No params cell found for: test_multistep_no_params.ipynb\n",
-      "<_io.TextIOWrapper name='/home/sagemaker-user/git/sciflow/nbs/test/flows/sagemaker/test_multistep_no_params.py' mode='w' encoding='UTF-8'>\n",
       "Sagemaker conversion failed for test_multistep_no_params.ipynb, \n",
-      "Reason: Step: preprocess depends on variable(s), \"{'min_date', 'model_level', 'traffic_percent'}\", which are not in the flow scope\n",
+      "Reason: Step: preprocess depends on variable(s), \"{'traffic_percent', 'min_date', 'model_level'}\", which are not in the flow scope\n",
       "Sagemaker conversion failed for test_data_handling.ipynb, \n",
       "Reason: Unsupported parameter type for sagemaker pipeline: ParamMeta(instance_type=<class 'dict'>, is_scalar=False, is_json_type=True, persist_type='pickle', has_metaflow_param=True, has_sagemaker_param=False)\n"
      ]
@@ -1398,19 +1393,6 @@
    ],
    "source": [
     "generate_flows()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# os.environ['USER'] = 'e02079'\n",
-    "# os.environ['SCIFLOW_BUCKET'] = 'pprsandboxpdlras3'\n",
-    "# test_nb = Path('test/test_multistep.ipynb')\n",
-    "# os.chdir('/home/sagemaker-user/git/sciflow/nbs/test/flows/sagemaker')\n",
-    "# run_flow(test_nb, flow_provider = \"sagemaker\", flow_command = \"show\")"
    ]
   },
   {
